extensions/tekton-cicd/base/dashboard/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tekton-dashboard-ingress
  namespace: tekton-pipelines
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`tekton.k3s-cluster.io`)
      kind: Rule
      services:
        - name: tekton-dashboard
          kind: Service
          namespace: tekton-pipelines
          port: 9097
  tls:
    secretName: k3s-cluster-tls
